# hass

hass/: LICENSE  README  copyright.txt  hass.cabal  stack.yaml
hass/app/: Main.hs
hass/doc/html-haddock/: Crypto.html  Daemon.html  Git.html  Helpers.html  Options.html  Types.html  UtilFunctions.html  doc-index.html  hass.haddock  hass.txt  index-frames.html  index.html  mini_Crypto.html  mini_Daemon.html  mini_Git.html  mini_Helpers.html  mini_Options.html  mini_Types.html  mini_UtilFunctions.html
hass/doc/html-haddock/src/: Crypto.html  Daemon.html  Git.html  Helpers.html  Options.html  Types.html  UtilFunctions.html
hass/slides/: 1.txt  3.txt  4.txt  5.txt  README.md  ghci.script
hass/src/: Crypto.hs  Daemon.hs  Git.hs  Helpers.hs  Options.hs  Types.hs  UtilFunctions.hs
slides/: 0.txt  2.txt  README.md
